<resources>
    <string name="app_name">Near</string>
    <string name="home_phone_hint">Ex. (373) 378 8383</string>
    <string name="home_email_hint">Ex. john.doe@gmail.com</string>
    <string name="home_wallet_name_hint">walletName.near</string>

    <string name="home_agreement">by clicking continue you must agree to near labs</string>
    <string name="home_agreement_and"> And </string>
    <string name="home_agreement_terms">Terms &amp; Conditions</string>
    <string name="home_agreement_policy">Privacy Policy</string>

    <string name="home_login">Login</string>
    <string name="home_get_started">Get Started</string>
    <string name="home_have_account">Already have Near Account</string>
    <string name="home_email">Email</string>
    <string name="home_phone">Phone</string>

    <string name="verification">Verification</string>
    <string name="verification_to_email">We\'ve sent a 6-digit verification code to the email address johndoe@gmail.com</string>
    <string name="verification_to_phone">We\'ve sent a 6-digit verification code to your phone</string>
    <string name="verification_enter_code">Enter verification code</string>
    <string name="verification_continue">Continue</string>
    <string name="verification_didnt_receive_code">Didn\'t receive your code?</string>
    <string name="verification_send_to_different_email">Send to different email address</string>
    <string name="verification_send_to_different_phone">Send to different phone number</string>
    <string name="verification_resend_code">Resend your code</string>

    <string name="near_account_create">Create NEAR Account</string>
    <string name="near_account_create_label">Enter an Account ID to use with your NEAR account. Your Account ID will be used for all NEAR operations, including sending and receiving assets.
    </string>
    <string name="near_account_full_name">Full Name</string>
    <string name="near_account_account_id">Account ID</string>
    <string name="near_account_name_ex">Ex John Doe</string>
    <string name="near_account_id_ex">yourname.near</string>
    <string name="near_account_create_an">Create an Account</string>
    <string name="near_account_login_with">Login with NEAR</string>

    <string name="gift_title">Gift an NFT</string>
    <string name="gift_send">Send Gift</string>
    <string name="share_app">Share App</string>

    <string name="search_hint">Search People</string>
    <string name="nft_item_art_title">Vecotry Illustration</string>
    <string name="nft_create_today_label">Start Creating\nyour<b> NFTs</b>\nToday</string>
    <string name="nft_create_an">Create an NFT</string>
    <string name="nft_my">My NFTs</string>
    <string name="nft_sell_all">See All</string>
    <string name="nft_history">History</string>
    <string name="nft_history_send">Send NFT</string>

    <string name="nft_recent_transactions">Recent Transactions</string>
    <string name="nft_history_all">All</string>
    <string name="nft_history_sent">Sent</string>
    <string name="nft_history_received">Received</string>

    <string name="nft_create_title">My NFTs</string>
    <string name="nft_create">Create NFT</string>
    <string name="transaction_sent_to">Sent to</string>
    <string name="transaction_received_from">Received from</string>


    <string name="nft_create_upload">Upload Files</string>
    <string name="nft_create_choose">Choose File</string>
    <string name="nft_create_nft_title">TITLE</string>
    <string name="nft_create_description">Description</string>
    <string name="nft_create_properties">PROPERTIES</string>
    <string name="nft_create_more">Add More</string>
    <string name="nft_create_category">Category</string>
    <string name="nft_create_creator">Creator</string>
    <string name="nft_create_preview">Preview</string>
    <string name="nft_create_nft_title_hint">Ex. Redeemable Art</string>
    <string name="nft_create_description_hint">Ex. Redeemable Art</string>
    <string name="nft_create_property_key_hint">Ex. Size</string>
    <string name="nft_create_property_val_hint">Ex. 40</string>
    <string name="nft_create_add_more">+ Add More</string>
    <string name="nft_create_next">Next</string>
    <string name="nft_create_mint">Mint NFT</string>

    <string name="settings_connected_wallet">Connected Wallet</string>
    <string name="settings_profile_settings">Profile Settings</string>
    <string name="settings_name">Name</string>
    <string name="settings_email">Email Address</string>
    <string name="settings_phone">Phone Number</string>
    <string name="settings_security">Security</string>
    <string name="settings_dialog_confirm">Ok</string>
    <string name="nft_creator_empty_title_msg">NFT title should not be empty!</string>
    <string name="nft_creator_no_file_msg">No NFT art was chosen!</string>
    <string name="nft_creator">Creator</string>

    <string-array name="nft_categories">
        <item>Digital Art</item>
        <item>Digital Video</item>
    </string-array>

</resources>