<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <include
                layout="@layout/section_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:progress="@{66}"
                app:showProgress="@{true}"
                app:title="@{@string/near_account_create}" />

            <TextView
                style="@style/label.start"
                android:text="@string/near_account_create_label" />


            <TextView
                style="@style/label.start"
                android:layout_marginTop="15dp"
                android:text="@string/near_account_full_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/near_account_full_name"
                style="@style/textInputLayout"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/near_account_name_ex" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/label.start"
                android:layout_marginTop="15dp"
                android:text="@string/near_account_account_id" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/near_account_account_id"
                style="@style/textInputLayout"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/near_account_id_ex" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                style="@style/button"
                android:enabled="true"
                android:text="@string/near_account_create_an"
                app:icon="@drawable/arrow_forward" />

            <include layout="@layout/section_user_agreement" />

            <TextView
                style="@style/label"
                android:layout_marginTop="20dp"
                android:text="@string/home_have_account" />

            <com.google.android.material.button.MaterialButton
                style="@style/button"
                android:text="@string/near_account_login_with"
                app:icon="@drawable/arrow_forward" />

        </LinearLayout>
    </ScrollView>
</layout>