<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="next"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <include
            layout="@layout/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:progress="@{30}"
            app:title="@{@string/verification}" />

        <TextView
            style="@style/label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/verification_to_phone" />

        <TextView
            android:id="@+id/phone"
            style="@style/label.title"
            android:text="00" />

        <TextView
            style="@style/label.small"
            android:text="@string/verification_enter_code" />

        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/verification_pin"
            style="@style/pin_field" />


        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:enabled="@{next,default=false}"
            android:text="@string/verification_continue"
            app:icon="@drawable/arrow_forward" />

        <include layout="@layout/section_divider" />

        <TextView
            android:id="@+id/verification_didnt_receive_code"
            style="@style/label"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/verification_didnt_receive_code" />

        <TextView
            android:id="@+id/verification_send_to_different_phone"
            style="@style/button_text"
            android:text="@string/verification_send_to_different_email" />

        <TextView
            android:id="@+id/verification_resend_code"
            style="@style/button_text"
            android:text="@string/verification_resend_code" />

    </LinearLayout>
</layout>