<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/home_art_color"
                android:src="@drawable/home_art" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:paddingBottom="9dp"
                android:src="@drawable/near_logo" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                style="@style/button_toggle"
                android:text="@string/home_email" />

            <com.google.android.material.button.MaterialButton
                style="@style/button_toggle"
                android:text="@string/home_phone" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/home_phone"
            style="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_phone_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:enabled="false"
            android:text="@string/home_get_started"
            app:icon="@drawable/arrow_forward" />

        <include layout="@layout/section_divider" />

        <TextView
            style="@style/label"
            android:text="@string/home_have_account" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_wallet_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/button"
            android:text="@string/home_login"
            app:icon="@drawable/arrow_forward" />

        <include layout="@layout/section_user_agreement" />
    </LinearLayout>
</ScrollView>
